# homework13

part1/: .example.env  docker-compose.yaml  main.py  pyproject.toml
part1/src/: schemas.py
part1/src/db/: models.py
part1/src/repository/: users.py
part1/src/routers/: auth.py  contacts.py  users.py
part1/src/services/: auth.py  email.py
part2/: .example.env  docker-compose.yaml  pyproject.toml
part2/quotes/: add_data_from_mongo.py  mongo_models.py
part2/quotes/quoteapp/: forms.py  models.py  urls.py  views.py
part2/quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date.py
part2/quotes/quoteapp/templates/quoteapp/: author.html  authorinfo.html  base.html  index.html  quote.html  quotes-by-tag.html
part2/quotes/quotes/: settings.py  urls.py
part2/quotes/users/: forms.py  urls.py  views.py
part2/quotes/users/migrations/: 0002_alter_profile_avatar.py
part2/quotes/users/templates/users/: login.html
